--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@signature-nft/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.0.0",
@@ -14,6 +16,8 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@nx/angular": "17.1.2",
+    "d3-path": "^3.1.0",
+    "d3-shape": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
@@ -33,23 +37,31 @@
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
     "@nx/js": "17.1.2",
+    "@nx/node": "17.1.2",
     "@nx/playwright": "17.1.2",
     "@nx/workspace": "17.1.2",
     "@playwright/test": "^1.36.0",
     "@schematics/angular": "~17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
+    "@types/d3-path": "^3.0.2",
+    "@types/d3-shape": "^3.1.5",
     "@types/jest": "^29.4.0",
-    "@types/node": "16.11.7",
+    "@types/jsdom": "^21.1.5",
+    "@types/node": "20.9.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "~8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^0.15.3",
+    "husky": "^8.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.3",
+    "jsdom": "^22.1.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "lint-staged": "^15.1.0",
     "nx": "17.1.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
